2004/04/02: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- plugin/dbio/csv: fixed factory function
- base/buffer: changed hardlimit from 64kb to 2mb


2004-04-01  Christian Stimming <stimming@tuhh.de>

	* src/parser/db.c: Fix errornous function argument to
	GWEN_DBIO_GetPlugin.


2004/04/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added plugin loading functions to GWEN_DBIO
- added functions GWEN_DB_WriteFileAs and GWEN_DB_ReadFileAs which allow
  using GWEN_DBIO plugins fro importing/exporting any format of files
  supported by plugins.
- added plugin "csv" which replaces the now deprecated CSV parser module
- changed install location of plugins from "share" to "lib"


2004/03/31: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added import/export framework for GWEN_DBs. This makes parser plugins
  based on GWEN_DBs much easier.


2004/03/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- reintroduced my old win32 target, since the one of Christian doesn't work
  the way I need it: It needs to build all objects/libraries again, and that
  simply takes too much time. Another problem is that my configure options
  are not used when creating the windows binaries (i.e. that makes using the
  same target in the project simthetic useless for my local system).
  So I now use my old approach which is simple, ugly but it works ;-)
  Christian may still use his target (which is now called "win32-cs") ;-)
- updated README.W32 to reflect the changes below


2004/03/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- changed the way a DLL is created:
    Now the libXXX.a library is taken (which - thanks to libtool - already
    contains all object files needed for building the DLL) and all the
    object files in the ".libs" folder of the toplevel library (because